feat: Add xG, fixture congestion, kickoff time analytics with model self-training
- Add Expected Goals (xG) service, controller, and frontend components
- Add Fixture Congestion analysis for team fatigue tracking
- Add Kickoff Time analysis for performance by time slot
- Implement Model Self-Training with accuracy tracking
- Add prediction backfill and recalculation scheduler
- Add model performance tracking with evaluation tables
- Add Weka schema builder for ML pipeline
- Add feature drift monitoring
- Enhance security with rate limiting improvements
- Remove deprecated services (FootballDataService, SeasonStatsUpdateListener)
- Consolidate common models to football-prediction-common module
- Add comprehensive unit tests